--- a/pages/19603.html
+++ b/pages/19603.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8862/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8862/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -670,7 +670,7 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<li><a href='#references'>References</a></li>
+<li><a href='#existing_work'>Existing work</a></li>
 <ul>
 <li><a href='#homotopy_type_theory'>Homotopy type theory</a></li>
 <li><a href='#modal_homotopy_type_theory'>Modal homotopy type theory</a></li>
@@ -682,7 +682,7 @@ margin-left: 0em;
 
 <p><a class='existingWikiWord' href='/nlab/show/Homotopy+type+theory'>Homotopy type theory</a> is a formal language in which it is possible to carry out <a class='existingWikiWord' href='/nlab/show/synthetic+mathematics'>synthetic mathematics</a> using proof assistants, such as <a class='existingWikiWord' href='/nlab/show/Coq'>Coq</a> and <a class='existingWikiWord' href='/nlab/show/Agda'>Agda</a>. This is also possible in extensions to <a class='existingWikiWord' href='/nlab/show/modal+homotopy+type+theory'>modal homotopy type theory</a>.</p>
 
-<h2 id='references'>References</h2>
+<h2 id='existing_work'>Existing work</h2>
 
 <h3 id='homotopy_type_theory'>Homotopy type theory</h3>
 
@@ -693,33 +693,33 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/Favonia'>Kuen-Bang Hou (Favonia)</a>, <a class='existingWikiWord' href='/nlab/show/Robert+Harper'>Robert Harper</a>, <em>Covering Spaces in Homotopy Type Theory</em>, (<a href='https://favonia.org/files/cover-types2016.pdf'>pdf</a>).</li>
 
-<li>Higher Groups in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1802.04315'>arXiv:1802.04315</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Ulrik+Buchholtz'>Ulrik Buchholtz</a>, <a class='existingWikiWord' href='/nlab/show/Floris+van+Doorn'>Floris van Doorn</a>, <a class='existingWikiWord' href='/nlab/show/Egbert+Rijke'>Egbert Rijke</a>, <em>Higher Groups in Homotopy Type Theory</em>, (<a href='https://arxiv.org/abs/1802.04315'>arXiv:1802.04315</a>)</li>
 
 <li>Free Higher Groups in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1805.02069'>arXiv:1805.02069</a>)</li>
 
 <li>Localization in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1807.04155'>arXiv:1807.04155</a>)</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em>The James construction and <math class='maruku-mathml' display='inline' id='mathml_eb7d72277f0e97e169da0128a84f26ed07c6b902_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_4(S^3)</annotation></semantics></math> in homotopy type theory</em>, (<a href='https://arxiv.org/abs/1710.10307'>arXiv:1710.10307</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em>The James construction and <math class='maruku-mathml' display='inline' id='mathml_b3680d9b8066c3a18a46813835fa3c94b3808534_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_4(S^3)</annotation></semantics></math> in homotopy type theory</em>, (<a href='https://arxiv.org/abs/1710.10307'>arXiv:1710.10307</a>)</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Dan+Licata'>Dan Licata</a>, <a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em><math class='maruku-mathml' display='inline' id='mathml_eb7d72277f0e97e169da0128a84f26ed07c6b902_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_n(S^n)</annotation></semantics></math> in Homotopy Type Theory</em>, , Invited Paper, CPP 2013, <a href='http://dlicata.web.wesleyan.edu/pubs/lb13cpp/lb13cpp.pdf'>PDF</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Dan+Licata'>Dan Licata</a>, <a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em><math class='maruku-mathml' display='inline' id='mathml_b3680d9b8066c3a18a46813835fa3c94b3808534_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_n(S^n)</annotation></semantics></math> in Homotopy Type Theory</em>, Invited Paper, CPP 2013, <a href='http://dlicata.web.wesleyan.edu/pubs/lb13cpp/lb13cpp.pdf'>PDF</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Ulrik+Buchholtz'>Ulrik Buchholtz</a>, <a class='existingWikiWord' href='/nlab/show/Egbert+Rijke'>Egbert Rijke</a>, <em>The Cayley-Dickson Construction in Homotopy Type Theory</em>, (<a href='https://arxiv.org/abs/1610.01134'>arXiv:1610.01134</a>):</li>
 </ul>
 
 <blockquote>
-<p>Constructs the <a class='existingWikiWord' href='/nlab/show/quaternionic+Hopf+fibration'>quaternionic Hopf fibration</a></p>
+<p>Construction of the <a class='existingWikiWord' href='/nlab/show/quaternionic+Hopf+fibration'>quaternionic Hopf fibration</a></p>
 </blockquote>
 
 <ul>
-<li>Cellular Cohomology in Homotopy Type Theory, arXiv:1802.02191</li>
+<li>Cellular Cohomology in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1802.02191'>arXiv:1802.02191</a>)</li>
 
-<li>The real projective spaces in homotopy type theory, arXiv:1704.05770</li>
+<li>The real projective spaces in homotopy type theory, (<a href='https://arxiv.org/abs/1704.05770'>arXiv:1704.05770</a>)</li>
 
-<li>Synthetic Homology in Homotopy Type Theory, arXiv:1706.01540</li>
+<li>Synthetic Homology in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1706.01540'>arXiv:1706.01540</a>)</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em>On the homotopy groups of spheres in homotopy type theory</em>, (<a href='https://arxiv.org/abs/1606.05916'>arXiv:1606.05916</a>)</li>
 
-<li>A mechanization of the Blakers-Massey connectivity theorem in Homotopy Type Theory, arXiv:1605.03227</li>
+<li>A mechanization of the Blakers-Massey connectivity theorem in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1605.03227'>arXiv:1605.03227</a>)</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Favonia'>Kuen-Bang Hou (Favonia)</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Shulman'>Michael Shulman</a>, <em>The Seifert–van Kampen Theorem in Homotopy Type Theory</em>, 2016, (<a href='https://favonia.org/files/vankampen-csl2016.pdf'>pdf</a>), (<a href='10.4230/LIPIcs.CSL.2016.22'>doi</a>)</li>
 
@@ -731,9 +731,9 @@ margin-left: 0em;
 <p>Work which uses <a class='existingWikiWord' href='/nlab/show/modal+homotopy+type+theory'>modal homotopy type theory</a>, with, for example, <a class='existingWikiWord' href='/nlab/show/modalities'>modalities</a> for <a class='existingWikiWord' href='/nlab/show/cohesion'>cohesion</a>, <a class='existingWikiWord' href='/nlab/show/differential+cohesion'>differential cohesion</a> and <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Michael+Shulman'>Michael Shulman</a>, <em>Brouwer’s fixed-point theorem in real-cohesive homotopy type theory</em>, arXiv:1509.07584</li>
+<li><a class='existingWikiWord' href='/nlab/show/Michael+Shulman'>Michael Shulman</a>, <em>Brouwer’s fixed-point theorem in real-cohesive homotopy type theory</em>, (<a href='https://arxiv.org/abs/1509.07584'>arXiv:1509.07584</a>)</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, <em>Cartan Geometry in Modal Homotopy Type Theory</em>, arXiv:1806.05966</li>
+<li><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, <em>Cartan Geometry in Modal Homotopy Type Theory</em>, (<a href='https://arxiv.org/abs/1806.05966'>arXiv:1806.05966</a>) 1806.05966</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, <em>Cohesive Covering Theory (Extended Abstract)</em>, (<a href='https://hott-uf.github.io/2018/abstracts/HoTTUF18_paper_15.pdf'>pdf</a>)</li>
 </ul>
@@ -743,14 +743,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 19, 2018 at 23:17:12.
+  Last revised on August 20, 2018 at 18:53:32.
   See the <a href="https://ncatlab.org/nlab/history/mathematics presented in homotopy type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mathematics+presented+in+homotopy+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematics+presented+in+homotopy+type+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/mathematics+presented+in+homotopy+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematics+presented+in+homotopy+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mathematics+presented+in+homotopy+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematics+presented+in+homotopy+type+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/mathematics+presented+in+homotopy+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematics+presented+in+homotopy+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mathematics presented in homotopy type theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
