--- a/pages/19608.html
+++ b/pages/19608.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      axiom K (modal logic) in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      axiom K (modal logic)
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8870/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -306,29 +308,95 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>This is a #test.</p>
+      <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p><a class='existingWikiWord' href='/nlab/show/axiom+K'>axiom K</a></p>
+<h4 id='modalities_closure_and_reflection'>Modalities, Closure and Reflection</h4>
+
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/modal+type+theory'>modal type theory</a></strong>, <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a></p><p><strong><a class='existingWikiWord' href='/nlab/show/closure+operator'>closure operator</a></strong>, <a class='existingWikiWord' href='/nlab/show/universal+closure+operator'>universal closure operator</a></p><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/idempotent+monad'>idempotent monad</a>, <a class='existingWikiWord' href='/nlab/show/comonad'>comonad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modal+type'>modal type</a>, <a class='existingWikiWord' href='/nlab/show/local+object'>local object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a>, <a class='existingWikiWord' href='/nlab/show/coreflective+subcategory'>coreflective subcategory</a></p>
+</li>
+</ul><h3 id='examples'>Examples</h3><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Moore+closure'>Moore closure</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+modality'>geometric modality</a>/<a class='existingWikiWord' href='/nlab/show/Lawvere-Tierney+topology'>Lawvere-Tierney topology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/S4+modal+logic'>S4 modal logic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/n-truncated+object+in+an+%28infinity%2C1%29-category'>n-truncation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Pi+modality'>Pi modality</a><math class='maruku-mathml' display='inline' id='mathml_ce274c9caf9a3b6e1e00275eb8868a7ab455ec1f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_ce274c9caf9a3b6e1e00275eb8868a7ab455ec1f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+</li>
+</ul></div>
+</div>
+</div>
+
+<p><em>Disambiguation: For axiom K as a principle of <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, see <a class='existingWikiWord' href='/nlab/show/axiom+K+%28type+theory%29'>axiom K (type theory)</a></em></p>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#developments'>Developments</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
+<h2 id='idea'>Idea</h2>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a>, axiom K, named after <a class='existingWikiWord' href='/nlab/show/Saul+Kripke'>Saul Kripke</a>, is a basic principle which almost all versions of propositional modal logic satisfy</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8b0a996e2f86020dae7587408208f58a824aca97_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo lspace='verythinmathspace'>:</mo><mo>□</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>→</mo><mi>q</mi><mo stretchy='false'>)</mo><mo>→</mo><mo>□</mo><mi>p</mi><mo>→</mo><mo>□</mo><mi>q</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'>K \colon \Box(p \to q) \to \Box p \to \Box q.</annotation></semantics></math></div>
+<h2 id='developments'>Developments</h2>
+
+<p>It is possible to consider a variant in <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> (<a href='#Spitters'>Spitters</a>)</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8b0a996e2f86020dae7587408208f58a824aca97_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Dependent</mi><mspace width='thickmathspace'></mspace><mi>K</mi><mo lspace='verythinmathspace'>:</mo><mo>□</mo><msub><mi>Π</mi> <mrow><mi>y</mi><mo>:</mo><mi>A</mi></mrow></msub><mi>B</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>Π</mi> <mrow><mi>x</mi><mo>:</mo><mo>□</mo><mi>A</mi></mrow></msub><mo>□</mo><mi>B</mi><mo stretchy='false'>[</mo><mi>open</mi><mspace width='thickmathspace'></mspace><mi>x</mi><mo stretchy='false'>/</mo><mi>y</mi><mo stretchy='false'>]</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+Dependent\; K \colon \Box \Pi_{y:A} B(y) \to \Pi_{x: \Box A} \Box B [open\; x/y].
+
+</annotation></semantics></math></div>
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='Spitters'><a class='existingWikiWord' href='/nlab/show/Bas+Spitters'>Bas Spitters</a> et al., <em>Modal Dependent Type Theory and Dependent Right Adjoints</em>, (<a href='http://www.cs.au.dk/~spitters/floc.pdf'>slides</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 22, 2018 at 03:31:31.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 22, 2018 at 03:17:49.
+  See the <a href="https://ncatlab.org/nlab/history/axiom K (modal logic)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1651" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1651 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/axiom+K+%28modal+logic%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/axiom K (modal logic)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/axiom+K+%28modal+logic%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/axiom+K+%28modal+logic%29" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/axiom+K+%28modal+logic%29" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
