--- a/pages/8935.html
+++ b/pages/8935.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      axiom K in nLab
+      axiom K (type theory) in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      axiom K
+      axiom K (type theory)
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4569/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4569/#Item_20" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -460,22 +460,16 @@ margin-left: 0em;
 </ul>
 </div>
 
-<ul>
-<li><span class='newWikiWord'>axiom K (type theory)<a href='/nlab/new/axiom+K+%28type+theory%29'>?</a></span></li>
-
-<li><span class='newWikiWord'>axiom K (modal logic)<a href='/nlab/new/axiom+K+%28modal+logic%29'>?</a></span></li>
-</ul>
-
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, the <em>axiom K</em> is an <a class='existingWikiWord' href='/nlab/show/axiom'>axiom</a> that when added to <a class='existingWikiWord' href='/nlab/show/intensional+type+theory'>intensional type theory</a> turns it into <a class='existingWikiWord' href='/nlab/show/extensional+type+theory'>extensional type theory</a> — or more precisely, what is called <a class='existingWikiWord' href='/nlab/show/extensional+type+theory'>here</a> “propositionally extensional type theory”. In the language of <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>, this means that all types are <a class='existingWikiWord' href='/nlab/show/h-sets'>h-sets</a>, accordingly axiom K is incompatible with the <a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalence axiom</a>.</p>
 
-<p>Heuristically, the axiom asserts that each <a class='existingWikiWord' href='/nlab/show/term'>term</a> of each <a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a> <math class='maruku-mathml' display='inline' id='mathml_98ba9d8a65139a65c236856dbab9125ec678c1a9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Id_A(x,x)</annotation></semantics></math> (of <a class='existingWikiWord' href='/nlab/show/equivalences'>equivalences</a> of a <a class='existingWikiWord' href='/nlab/show/term'>term</a> <math class='maruku-mathml' display='inline' id='mathml_98ba9d8a65139a65c236856dbab9125ec678c1a9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>x \colon A</annotation></semantics></math>) is <a class='existingWikiWord' href='/nlab/show/propositional+equality'>propositionally equal</a> to the canonical <a class='existingWikiWord' href='/nlab/show/reflexive+relation'>reflexivity</a> equality proof <math class='maruku-mathml' display='inline' id='mathml_98ba9d8a65139a65c236856dbab9125ec678c1a9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>refl</mi> <mi>x</mi></msub><mo lspace='verythinmathspace'>:</mo><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>refl_x \colon Id_A(x,x)</annotation></semantics></math>.</p>
+<p>Heuristically, the axiom asserts that each <a class='existingWikiWord' href='/nlab/show/term'>term</a> of each <a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a> <math class='maruku-mathml' display='inline' id='mathml_678ff69343e8ceec28c33028c8235cfd9a035e6b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Id_A(x,x)</annotation></semantics></math> (of <a class='existingWikiWord' href='/nlab/show/equivalences'>equivalences</a> of a <a class='existingWikiWord' href='/nlab/show/term'>term</a> <math class='maruku-mathml' display='inline' id='mathml_678ff69343e8ceec28c33028c8235cfd9a035e6b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>x \colon A</annotation></semantics></math>) is <a class='existingWikiWord' href='/nlab/show/propositional+equality'>propositionally equal</a> to the canonical <a class='existingWikiWord' href='/nlab/show/reflexive+relation'>reflexivity</a> equality proof <math class='maruku-mathml' display='inline' id='mathml_678ff69343e8ceec28c33028c8235cfd9a035e6b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>refl</mi> <mi>x</mi></msub><mo lspace='verythinmathspace'>:</mo><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>refl_x \colon Id_A(x,x)</annotation></semantics></math>.</p>
 
 <p>See also at <em><a href='extensional+type+theory#PropositionalExtensionality'>extensional type theory – Propositional extensionality</a></em>.</p>
 
 <h2 id='statement'>Statement</h2>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_98ba9d8a65139a65c236856dbab9125ec678c1a9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo lspace='verythinmathspace'>:</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi></mrow></munder><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>x</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi></mrow></munder><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>P</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>Type</mi></mrow></munder><mrow><mo>(</mo><mi>P</mi><mo stretchy='false'>(</mo><msub><mi>refl</mi> <mi>A</mi></msub><mi>x</mi><mo stretchy='false'>)</mo><mo>→</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>h</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></munder><mi>P</mi><mo stretchy='false'>(</mo><mi>h</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_678ff69343e8ceec28c33028c8235cfd9a035e6b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo lspace='verythinmathspace'>:</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi></mrow></munder><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>x</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi></mrow></munder><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>P</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>Type</mi></mrow></munder><mrow><mo>(</mo><mi>P</mi><mo stretchy='false'>(</mo><msub><mi>refl</mi> <mi>A</mi></msub><mi>x</mi><mo stretchy='false'>)</mo><mo>→</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>h</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>Id</mi> <mi>A</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></munder><mi>P</mi><mo stretchy='false'>(</mo><mi>h</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
   K 
   \colon 
   \underset{A \colon Type}{\prod} 
@@ -490,7 +484,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <h2 id='properties'>Properties</h2>
 
-<p>Unlike its logical equivalent <a class='existingWikiWord' href='/nlab/show/axiom+UIP'>axiom UIP</a>, axiom K can be endowed with computational behavior: <math class='maruku-mathml' display='inline' id='mathml_98ba9d8a65139a65c236856dbab9125ec678c1a9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>x</mi><mo>,</mo><mi>P</mi><mo>,</mo><mi>d</mi><mo>,</mo><msub><mi>refl</mi> <mi>A</mi></msub><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(A,x,P,d,refl_A x)</annotation></semantics></math> computes to <math class='maruku-mathml' display='inline' id='mathml_98ba9d8a65139a65c236856dbab9125ec678c1a9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>. This gives a way to specify a computational propositionally extensional type theory.</p>
+<p>Unlike its logical equivalent <a class='existingWikiWord' href='/nlab/show/axiom+UIP'>axiom UIP</a>, axiom K can be endowed with computational behavior: <math class='maruku-mathml' display='inline' id='mathml_678ff69343e8ceec28c33028c8235cfd9a035e6b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>x</mi><mo>,</mo><mi>P</mi><mo>,</mo><mi>d</mi><mo>,</mo><msub><mi>refl</mi> <mi>A</mi></msub><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(A,x,P,d,refl_A x)</annotation></semantics></math> computes to <math class='maruku-mathml' display='inline' id='mathml_678ff69343e8ceec28c33028c8235cfd9a035e6b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>. This gives a way to specify a computational propositionally extensional type theory.</p>
 
 <p>This sort of computational axiom K can also be implemented with, and is sufficient to imply, a general scheme of function definition by pattern-matching. This is implemented in the proof assistant <a class='existingWikiWord' href='/nlab/show/Agda'>Agda</a>. (The flag <code>--without-K</code> alters Agda’s pattern-matching scheme to a weaker version appropriate for <a class='existingWikiWord' href='/nlab/show/intensional+type+theory'>intensional type theory</a>, including <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>.)</p>
 
@@ -525,22 +519,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 22, 2018 at 02:58:31.
-  See the <a href="https://ncatlab.org/nlab/history/axiom K" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on August 22, 2018 at 03:30:17.
+  See the <a href="https://ncatlab.org/nlab/history/axiom K (type theory)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/axiom+K" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/axiom+K/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/axiom+K" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/axiom+K" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/axiom K/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/axiom+K+%28type+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/axiom+K+%28type+theory%29/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/axiom+K+%28type+theory%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/axiom+K+%28type+theory%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/axiom K (type theory)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/axiom+K" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/axiom+K+%28type+theory%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/axiom+K" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/axiom+K+%28type+theory%29" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/axiom+K" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/axiom+K+%28type+theory%29" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
